Fix: Switch to Static Assets cache to bypass Cloudflare R2 requirement

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -19,14 +19,7 @@
 			"service": "portfolio"
 		}
 	],
-	/*
-	"r2_buckets": [
-		{
-			"binding": "NEXT_INC_CACHE_R2_BUCKET",
-			"bucket_name": "cache"
-		}
-	],
-	*/
+	/* R2 removed to avoid account requirement */
 	"images": {
 		// Enable image optimization
 		// see https://opennext.js.org/cloudflare/howtos/image
